--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* step two, set up up global CSS variables */
+
 @import url('https://fonts.googleapis.com/css?family=Oswald|Rambla|Staatliches&display=swap');
 
 body{
@@ -16,6 +16,7 @@ body{
 }
 
 /* global classes */
+
 .font-staat{
     font: normal 400 18px var(--font-staat);
 }
@@ -46,8 +47,7 @@ body{
     background-color: var(--color-primary);
 }
 
-/* #global classes */
- /* step four, add header CSS */
+
 #header{
     position: fixed;
     top: 0;
@@ -77,7 +77,7 @@ body{
 
 #header .toggle-button{
     background: none;
-    color: var(--color-primary);
+    color:rgb(136, 23, 192);
     position: fixed;
     top: 25px;
     right: 20px;
@@ -91,9 +91,9 @@ body{
 
 /* site-main */
 
-
 .site-banner .banner-area{
-    background: url(https://images.unsplash.com/photo-1468608374703-abdfab03d1bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80) no-repeat;
+    background: url(https://i.ibb.co/ww03vYY/obelisco.jpg) no-repeat;
+    
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -114,18 +114,52 @@ body{
     border-radius: 50%;
     margin: auto;
     background: url(./assets/about.jpg) no-repeat;
-    background-size: 200%;
+    background-size: 110%;
     background-position: 40% 0;
 }
-
 
 @media screen and (min-width: 768px){
     .toggle-button{
         display: none;
     }
     #header{
-        z-index:0;
+        z-index:1;
     }
 }
 
-/* #site-main */
+/* site-secondary */
+
+h1 {
+    text-shadow: 2px 2px whitesmoke;
+  }
+
+ul {
+    list-style-type: none;
+  }
+
+div {
+    color: black;
+    font-size: 22px;
+    font-family: sans-serif;
+}
+
+h2 {
+    padding: 25px;
+    color: rgb(136, 23, 192);
+    font-size: 36px;
+    font-family: 'Courier New', Courier, monospace;
+}
+.container li {
+    margin-bottom: 10px;
+}
+
+/* Style buttons */
+
+.btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 20px;
+}
