--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
 
 #header .toggle-button{
     background: none;
-    color:rgb(136, 23, 192);
+    color:rgb(201, 23, 23);
     position: fixed;
     top: 25px;
     right: 20px;
@@ -145,12 +145,17 @@ div {
 
 h2 {
     padding: 25px;
-    color: rgb(136, 23, 192);
+    color: rgb(201, 23, 23);
     font-size: 36px;
     font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
 }
-.container li {
-    margin-bottom: 10px;
+.container {
+    margin-bottom: 20px;
+}
+
+#contact {
+    justify-content: center;
 }
 
 /* Style buttons */
