--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 :root{
-    --color-primary: #000000;
+    --color-primary: rgb(204, 63, 12);
     --color-secondary: #ffffff;
     --color-border: #ffffff34;
     --font-staat: 'Staatliches', cursive;
@@ -123,7 +123,7 @@ body{
         display: none;
     }
     #header{
-        z-index:1;
+        z-index:0;
     }
 }
 
