--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-
 @import url('https://fonts.googleapis.com/css?family=Oswald|Rambla|Staatliches&display=swap');
 
 body{
     margin: 0;
     padding: 0;
 }
-
 :root{
     --color-primary: rgb(204, 63, 12);
     --color-secondary: #ffffff;
@@ -26,7 +24,6 @@ body{
 .font-ram{
     font: normal bold 18px var(--font-ram);
 }
-
 .font-size-40{
     font-size: 40px;
 }
@@ -42,11 +39,11 @@ body{
 .font-size-16{
     font-size: 16px;
 }
-
 .bgcolor-primary{
     background-color: var(--color-primary);
 }
 
+/* navigation */
 
 #header{
     position: fixed;
@@ -56,7 +53,6 @@ body{
     z-index:1;
     transition: left .5s ease;
 }
-
 #header nav{
     height: 100vh;
 }
@@ -64,17 +60,14 @@ body{
     letter-spacing: 2px;
     color: var(--color-secondary);
 }
-
 #header .nav-link{
     margin: .7rem 1rem;
     border-bottom: 1px solid var(--color-border);
     text-transform: uppercase;
 }
-
 #header .nav-link:hover{
     color: var(--color-secondary) !important;
 }
-
 #header .toggle-button{
     background: none;
     color:rgb(201, 23, 23);
@@ -83,88 +76,123 @@ body{
     right: 20px;
     border: 1px solid var(--color-border);
 }
-
 .toggle-left{
     left: 0 !important;
     width: 1000px !important;
 }
 
-/* site-main */
+/*banner area page*/
 
 .site-banner .banner-area{
     background: url(https://i.ibb.co/ww03vYY/obelisco.jpg) no-repeat;
-    
     background-size: cover;
     width: 100%;
     height: 100vh;
     position: relative;
+    min-height: 100%;
+    min-width: 100%;
+    max-width:20%;
+    display:block;
 }
-
-.site-banner .banner-area .author{
+.site-banner .banner-area .name{
     margin: 0;
     position: absolute;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
-.site-banner .banner-area .author .author-img{
+.site-banner .banner-area .author-img{
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    margin: auto;
-    background: url(./assets/about.jpg) no-repeat;
-    background-size: 110%;
-    background-position: 40% 0;
+    justify-content: center;
+    align-self: center;
+    background-size: 100%;
 }
-
-@media screen and (min-width: 768px){
+@media(min-width: 768px){
     .toggle-button{
-        display: none;
+        display:none;
     }
     #header{
-        z-index:0;
+        z-index:1;
     }
 }
+@media(min-width: 695px){
+    /* .toggle-button{
+        display:none;
+    } */
+    #header{
+        z-index:1;
+    }
+ }
 
-/* site-secondary */
+/* main area page*/
 
-h1 {
-    text-shadow: 2px 2px whitesmoke;
+.name {
+    text-shadow: 2px 2px rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    position: relative;
+    bottom: 160px;
+    left: 500px;
+    display: none;
   }
-
-ul {
+#sun{
+    /* bottom: -750px;
+    /* left: 670px; */
+    position: absolute; 
+    bottom: 440px;
+    left: 720px;
+}
+.sun{
+    width: 25px;
+    height: 25px;
+    background-color: #ffde00;
+    border-radius: 50%;
+    box-shadow: 0 0 0 5px #ffde0080, 0 0 0 12px #ffde0040, 0 0 0 19px #ffde0020, 0 0 0 26px #ffde0010;
+    bottom: 500px;
+    /* left: 670px; */
+}
+#degree {
     list-style-type: none;
   }
-
+#school{
+    list-style-type: none;
+}
+#school:before {
+    content: '•';
+    margin-right: 8px;
+}
 div {
     color: black;
     font-size: 22px;
     font-family: sans-serif;
 }
-
+#titleCtnr{
+    display: inline-flex;
+    margin: 4em 0 4em 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+}
 h2 {
-    padding: 25px;
-    color: rgb(201, 23, 23);
-    font-size: 36px;
+    color: rgb(255, 255, 255);
+    font-size: 25px;
     font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
+}
+.h2TextCtnr{
+    border: 1px solid rgb(255, 255, 255);
+    margin-left: 1em;
+    width: 30em;
+    height: 1.5em;
+    background-color: rgb(255, 94, 0);
+    border-radius: 25px;
 }
 .container {
     margin-bottom: 20px;
+    z-index: 1;
 }
-
 #contact {
     justify-content: center;
+    margin-bottom: 3em;
 }
 
-/* Style buttons */
-
-.btn {
-    background-color: DodgerBlue;
-    border: none;
-    color: white;
-    padding: 12px 30px;
-    cursor: pointer;
-    font-size: 20px;
-}
